--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,3 +36,21 @@ jobs:
 
     - name: Build
       run: npm run build
+
+    - name: Deploy
+      run: |
+          git --global user.name "morteza" 
+          git --global user.email "m.jenabzadeh@gmail.com"
+          git remote set-url origin https://${github_token}@github.com/${repository}
+          npm run deploy          
+    env:
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+          repository: ${{ github.repository }}
+      
+      
+    
+    
+
+
