--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "autocorrection",
   "version": "0.1.0",
+  "homepage": "https://morijenab.github.io/autoCorrection-app",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
