fix package json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "autocorrection",
   "version": "0.1.0",
-  "homepage": "https://morijenab.github.io/autoCorrection-app",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+  "homepage": "https://morijenab.github.io/autoCorrection-app",  
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -19,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test  --coverage",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
