--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "autocorrection",
   "version": "0.1.0",
-  "homepage": "https://morijenab.github.io/autoCorrection-app",  
+  "homepage": "https://morijenab.github.io/autocorrection",  
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
