--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "engines": { "node": "16" },
   "eslintConfig": {
     "extends": [
       "react-app",
